force-app/main/default/objects/Account_Discount__c/Account_Discount__c.object-meta.xml
<CustomObject>
    <label>Account Discount</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>