force-app/main/default/objects/Account_Discount__c/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>Account__r.case_safe_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>