force-app/main/default/objects/Account_Discount__c/fields/BID_allocation_product__c.field-meta.xml
<CustomField>
    <fullName>BID_allocation_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BID allocation product?</label>
    <type>Checkbox</type>
</CustomField>