force-app/main/default/objects/Account_Discount__c/fields/BID_Price__c.field-meta.xml
<CustomField>
    <fullName>BID_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The price paid by the partnership in this discount.</description>
    <inlineHelpText>The price paid by the partnership in this discount.</inlineHelpText>
    <label>BID Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>