force-app/main/default/objects/Account_Discount__c/fields/BID_Rebate__c.field-meta.xml
<CustomField>
    <fullName>BID_Rebate__c</fullName>
    <inlineHelpText>BID will receive a credit for this amount (per item) on their invoices</inlineHelpText>
    <label>BID Rebate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>