force-app/main/default/objects/Account_Discount__c/fields/Discount_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Discount_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Case Safe ID</label>
    <type>Text</type>
</CustomField>