force-app/main/default/objects/Account_Discount__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>Discount type according to the type of record of the account related to the discount.</description>
    <formula>Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>