force-app/main/default/objects/Account_Discount__c/fields/DiscountSupEndDate__c.field-meta.xml
<CustomField>
    <fullName>DiscountSupEndDate__c</fullName>
    <description>The date after which the discount/supplement is no longer applicable.</description>
    <inlineHelpText>The date after which the discount/supplement is no longer applicable.</inlineHelpText>
    <label>Discount End Date</label>
    <type>Date</type>
</CustomField>