force-app/main/default/objects/Account_Discount__c/fields/DiscountSupStartDate__c.field-meta.xml
<CustomField>
    <fullName>DiscountSupStartDate__c</fullName>
    <label>Discount Start Date</label>
    <type>Date</type>
</CustomField>