force-app/main/default/objects/Account_Discount__c/fields/EnqixBIDId__c.field-meta.xml
<CustomField>
    <fullName>EnqixBIDId__c</fullName>
    <externalId>true</externalId>
    <label>EnqixBIDId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>