force-app/main/default/objects/Account_Discount__c/fields/EnqixUniqueID__c.field-meta.xml
<CustomField>
    <fullName>EnqixUniqueID__c</fullName>
    <externalId>true</externalId>
    <label>EnqixUniqueID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>