force-app/main/default/objects/Account_Discount__c/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <description>The price of product before any discounts.</description>
    <inlineHelpText>The price of product before any discounts.</inlineHelpText>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>