force-app/main/default/objects/Account_Discount__c/fields/Gross_Price_f__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_f__c</fullName>
    <formula>Gross_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>