force-app/main/default/objects/Account_Discount__c/fields/Location_Price__c.field-meta.xml
<CustomField>
    <fullName>Location_Price__c</fullName>
    <description>The price paid by the location in this discount.</description>
    <formula>Net_Price__c - BID_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The price paid by the location in this discount.</inlineHelpText>
    <label>Location Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>