force-app/main/default/objects/Account_Discount__c/fields/Quantity_Limit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Limit__c</fullName>
    <label>Quantity Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>