force-app/main/default/objects/Account_Discount__c/fields/Quantity_Limit_Period__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Limit_Period__c</fullName>
    <label>Quantity Limit Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>