force-app/main/default/objects/Account_Discount__c/fields/Stop_at_Limit__c.field-meta.xml
<CustomField>
    <fullName>Stop_at_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stop BID discount at the limit that was defined.</description>
    <inlineHelpText>Stop BID discount at the limit that was defined.</inlineHelpText>
    <label>Stop at Limit</label>
    <type>Checkbox</type>
</CustomField>