force-app/main/default/objects/Account_Discount__c/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspended</label>
    <type>Checkbox</type>
</CustomField>