force-app/main/default/objects/Account_Discount__c/fields/tmstamp_insert__c.field-meta.xml
<CustomField>
    <fullName>tmstamp_insert__c</fullName>
    <label>tmstamp_insert</label>
    <type>DateTime</type>
</CustomField>