force-app/main/default/objects/Account_Discount__c/recordTypes/AccountDiscount.recordType-meta.xml
<RecordType>
    <fullName>AccountDiscount</fullName>
    <active>true</active>
    <description>Record type for a discount of type &quot;Account&quot;.</description>
    <label>AccountDiscount</label>
</RecordType>