force-app/main/default/objects/Account_Discount__c/recordTypes/PartnerDiscount.recordType-meta.xml
<RecordType>
    <fullName>PartnerDiscount</fullName>
    <active>true</active>
    <description>Record type for a discount of type &quot;Partner&quot;.</description>
    <label>PartnerDiscount</label>
</RecordType>