force-app/main/default/objects/Account_Discount__c/validationRules/Account_BID.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_BID</fullName>
    <active>true</active>
    <description>Cannot insert a BID Discount in a non BID Account</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; TEXT(Account__r.Enqix_Classification__c) &lt;&gt; &apos;BID&apos;</errorConditionFormula>
    <errorMessage>Cannot insert a BID Discount in a non BID Account</errorMessage>
</ValidationRule>