force-app/main/default/objects/Account_Discount__c/validationRules/Account_PriceBook.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_PriceBook</fullName>
    <active>false</active>
    <description>The account needs the Pricebook to calculate product gross price</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; ISBLANK(Account__r.Price_Book__c)</errorConditionFormula>
    <errorMessage>Account without Pricebook</errorMessage>
</ValidationRule>