force-app/main/default/objects/Account_Discount__c/validationRules/AccountDiscount_Startdate_Enddate.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountDiscount_Startdate_Enddate</fullName>
    <active>true</active>
    <description>Start Date After End Date</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; DiscountSupStartDate__c  &gt;  DiscountSupEndDate__c</errorConditionFormula>
    <errorDisplayField>DiscountSupStartDate__c</errorDisplayField>
    <errorMessage>Start Date After End Date</errorMessage>
</ValidationRule>