force-app/main/default/objects/Account_Discount__c/validationRules/BID_BIDPrice_BIDRebate_XOR.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_BIDPrice_BIDRebate_XOR</fullName>
    <active>true</active>
    <description>Cannot Have a BID Price and a BID Rebate</description>
    <errorConditionFormula>BID_Price__c &gt; 0 &amp;&amp; BID_Rebate__c &gt; 0</errorConditionFormula>
    <errorMessage>Cannot Have a BID Price and a BID Rebate</errorMessage>
</ValidationRule>