force-app/main/default/objects/Account_Discount__c/validationRules/BID_BIDPrice_Diff.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_BIDPrice_Diff</fullName>
    <active>true</active>
    <description>BID Price Must Equal Net Price Less Location Price</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp;  
BID_Price__c !=  Net_Price__c -  Location_Price__c</errorConditionFormula>
    <errorDisplayField>BID_Price__c</errorDisplayField>
    <errorMessage>BID Price Must Equal Net Price Less Location Price</errorMessage>
</ValidationRule>