force-app/main/default/objects/Account_Discount__c/validationRules/BID_BIDPrice_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_BIDPrice_Positive</fullName>
    <active>true</active>
    <description>BID Price Cannot Be Negative</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; 
 BID_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>BID_Price__c</errorDisplayField>
    <errorMessage>BID Price Cannot Be Negative</errorMessage>
</ValidationRule>