force-app/main/default/objects/Account_Discount__c/validationRules/BID_BIDRebate_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_BIDRebate_Positive</fullName>
    <active>true</active>
    <description>BID Rebate Cannot Be Negative</description>
    <errorConditionFormula>(RecordType.DeveloperName = &apos;PartnerDiscount&apos;)
&amp;&amp; (BID_Rebate__c&lt;0)</errorConditionFormula>
    <errorDisplayField>BID_Rebate__c</errorDisplayField>
    <errorMessage>BID Rebate Cannot Be Negative</errorMessage>
</ValidationRule>