force-app/main/default/objects/Account_Discount__c/validationRules/BID_Discount_Cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_Discount_Cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Product_Discount__c) &gt; 0 &amp;&amp; Product_Discount__c &lt;0</errorConditionFormula>
    <errorDisplayField>Product_Discount__c</errorDisplayField>
    <errorMessage>Can&apos;t change a product discount into a supplement. Delete the discount and add a supplement.</errorMessage>
</ValidationRule>