force-app/main/default/objects/Account_Discount__c/validationRules/BID_Discount_Cannot_be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_Discount_Cannot_be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Product_Discount__c) &lt; 0 &amp;&amp; Product_Discount__c &gt;0</errorConditionFormula>
    <errorDisplayField>Product_Discount__c</errorDisplayField>
    <errorMessage>Can&apos;t change a product supplement into a discount. Delete the supplement and add a discount.</errorMessage>
</ValidationRule>