force-app/main/default/objects/Account_Discount__c/validationRules/BID_Discount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_Discount_Positive</fullName>
    <active>false</active>
    <description>Discount Cannot Be Negative</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; 
Product_Discount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Product_Discount__c</errorDisplayField>
    <errorMessage>BID Discount Cannot Be Negative</errorMessage>
</ValidationRule>