force-app/main/default/objects/Account_Discount__c/validationRules/BID_DiscountEndDate_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_DiscountEndDate_Null</fullName>
    <active>true</active>
    <description>Cannot Enter a Discount Without a End Date</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp;
ISBLANK( DiscountSupEndDate__c )</errorConditionFormula>
    <errorDisplayField>DiscountSupEndDate__c</errorDisplayField>
    <errorMessage>Cannot Enter a Discount Without a End Date</errorMessage>
</ValidationRule>