force-app/main/default/objects/Account_Discount__c/validationRules/BID_GrossPrice_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_GrossPrice_Positive</fullName>
    <active>true</active>
    <description>Gross Price Cannot Be Negative</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; 
(ISBLANK(Gross_Price__c) || Gross_Price__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Gross_Price__c</errorDisplayField>
    <errorMessage>Gross Price Cannot Be Negative</errorMessage>
</ValidationRule>