force-app/main/default/objects/Account_Discount__c/validationRules/BID_LocationPrice_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_LocationPrice_Positive</fullName>
    <active>false</active>
    <description>Location Price Cannot Be Negative</description>
    <errorConditionFormula>(RecordType.DeveloperName = &apos;PartnerDiscount&apos;) &amp;&amp; 
(VALUE(TEXT(Location_Price__c)) &lt; 0)</errorConditionFormula>
    <errorMessage>Location Price Cannot Be Negative</errorMessage>
</ValidationRule>