force-app/main/default/objects/Account_Discount__c/validationRules/BID_NetPrice_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>BID_NetPrice_Positive</fullName>
    <active>false</active>
    <description>Net Price Cannot Be Negative</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;PartnerDiscount&apos; &amp;&amp; 
 Net_Price__c  &lt; 0</errorConditionFormula>
    <errorMessage>Net Price Cannot Be Negative</errorMessage>
</ValidationRule>