force-app/main/default/objects/Account_Discount__c/validationRules/Bid_Price_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Bid_Price_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK( BID_Price__c ), true, false)</errorConditionFormula>
    <errorDisplayField>BID_Price__c</errorDisplayField>
    <errorMessage>BID Price needs to be filled.</errorMessage>
</ValidationRule>