force-app/main/default/objects/Account_Discount__c/validationRules/DiscountStartDate_BlankReplace.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountStartDate_BlankReplace</fullName>
    <active>true</active>
    <description>Blank Discount Start Date Cannot Replace Non-Blank One</description>
    <errorConditionFormula>RecordType.DeveloperName != &apos;PartnerDiscount&apos; &amp;&amp; 
NOT(ISBLANK(PRIORVALUE(DiscountSupStartDate__c))) &amp;&amp; ISBLANK(DiscountSupStartDate__c)</errorConditionFormula>
    <errorDisplayField>DiscountSupStartDate__c</errorDisplayField>
    <errorMessage>Blank Discount Start Date Cannot Replace Non-Blank One</errorMessage>
</ValidationRule>