force-app/main/default/objects/Account_Discount__c/validationRules/DiscountStartDate_FutureForSameDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountStartDate_FutureForSameDiscount</fullName>
    <active>true</active>
    <description>New Future Discount Start Date But Same Discount</description>
    <errorConditionFormula>RecordType.DeveloperName != &apos;PartnerDiscount&apos; &amp;&amp; 
PRIORVALUE( Product_Discount__c )  = Product_Discount__c &amp;&amp; 
PRIORVALUE(  DiscountSupStartDate__c ) != DiscountSupStartDate__c &amp;&amp; $User.Username != &apos;integration@thefirstmile.co.uk&apos;</errorConditionFormula>
    <errorMessage>New Future Discount Start Date But Same Discount</errorMessage>
</ValidationRule>