force-app/main/default/objects/Account_Discount__c/validationRules/DiscountStartDate_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountStartDate_Null</fullName>
    <active>true</active>
    <description>Cannot Enter a Discount Without a Start Date</description>
    <errorConditionFormula>ISBLANK(DiscountSupStartDate__c)</errorConditionFormula>
    <errorDisplayField>DiscountSupStartDate__c</errorDisplayField>
    <errorMessage>Cannot Enter a Discount Without a Start Date</errorMessage>
</ValidationRule>