force-app/main/default/objects/Account_Discount__c/validationRules/RestrictAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAccount</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.RecordType.Name != &apos;Account&apos; &amp;&amp; Account__r.RecordType.Name != &apos;Partner&apos;</errorConditionFormula>
    <errorMessage>Account must be of type Parent or Partner</errorMessage>
</ValidationRule>