force-app/main/default/objects/Account_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>